20 April 2011: Wouter
	- incremental NSEC3 precompile.

14 April 2011: Wouter
	- remove chnum. Added numlist sorted by domain.number.
	  domains that are not used are removed.

13 April 2011: Wouter
	- Fix is_existing flag for ENT when domain that has a shared ENT
	  is deleted by IXFR.
	- zonec can parse strings with RR in it.
	- unit test for namedb.

8 April 2011: Wouter
	- porting complete.
	- tag 4.0.0-imp2 created
	- trunk is version 4.0.0-imp3.

7 April 2011: Wouter
	- ported to sunos 4.1.4, the unit test works (udb, radtree in mmap).

6 April 2011: Wouter
	- UDB_CHECK is enabled if --enable-checking is used.
	  Because it checks the pointer-administration lists it slows down.
	- udb-inspect has feature -l that lists zones (and RRs) in nsd.db.
	- fix memory leak by zonec; the region_cleanup triggers too late.
	- set listen TCP_BACKLOG to 16 by default, it avoids connect reset
	  by peer in 1000-zones transfer on an ultra10, thus for many-zones.
	- default xfrd-reload-timeout to 1 second.

5 April 2011: Wouter
	- Fix uninitialised value in xfrd nsd_soa, the rdata_count.
	- Unit test for update of the nsd.db with new contents.
	- Fix array bounds check in radtree-search function.

4 April 2011: Wouter
	- removed zonec from tests. fix unknown_rr test, enable ipseckey test.
	  increased timeouts on tests that are hard on the filesystem.
	- Fixed IPSECKEY printout by nsd-patch.

30 March 2011: Wouter
	- nsd edits nsd.db for IXFR and AXFR messages.  since xfrd already
	  checks zone transfers completely for syntax those errors cannot
	  happen, if they do (memory, disk error) the file is left dirty,
	  to be recreated on the next start (and the process dies).

29 March 2011: Wouter
	- nsd recreates nsd.db if it has not been closed properly or is
	  corrupted (bad header or wrong file format).

28 March 2011: Wouter
	- NSD without zonec.  NSD loads zonefiles on start.
	  NSD stores NSEC3hashes on disk.

25 March 2011: Wouter