@@ -1,3 +1,6 @@
+21 April 2011: Wouter
+	- unit test and fixes in nsec3 precompile code.
+
 20 April 2011: Wouter
 	- incremental NSEC3 precompile.
 
